Add router and controller for activity-graph
