# swagger/swagger.yml
@@ -196,6 +196,34 @@ paths:
       security:
       - token_auth:
         - write:follow
+  /graph/activity/{uid}:
+    get:
+      tags:
+      - graph
+      description: Gives the activity graph for a user with given uid, (Logged-in
+        user if uid is empty)
+      operationId: GraphController.Activity Graph
+      parameters:
+      - in: path
+        name: uid
+        description: uid of user
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/types.User'
+        "400":
+          description: :uid is invalid
+        "401":
+          description: ': Unauthorized'
+        "404":
+          description: user not found
+        "500":
+          description: server_error
+      security:
+      - token_auth:
+        - read:user
   /submission/{site}:
     post:
       tags:
@@ -804,6 +832,22 @@ definitions:
         type: string
       username:
         type: string
+  types.SolvedProblemsCount:
+    title: SolvedProblemsCount
+    type: object
+    properties:
+      codechef:
+        type: integer
+        format: int64
+      codeforces:
+        type: integer
+        format: int64
+      hackerrank:
+        type: integer
+        format: int64
+      spoj:
+        type: integer
+        format: int64
   types.Submission:
     title: Submission
     type: object
@@ -870,6 +914,8 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/types.Submission'
+      solved_problems_count:
+        $ref: '#/definitions/types.SolvedProblemsCount'
       username:
         type: string
   types.WorldRankComparison:
